# queue_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.db-journal  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 06350ca3c87d_file_records_model.py  10cc8ddaacd4_change_idt_columns_to_bigint.py  6878d4ecfbaf_init.py  b6f3b5304264_initialmigration.py  ceb9ee454828_init.py
app/fsm_states/: client_states.py  operator_states.py
app/handlers/: add_tasks.py  client_details.py  client_equipment.py  details.py  details_client.py  operator_details.py  operator_equipment.py  operator_students_cards.py  parent.py  penalty.py  start.py  start_login.py  start_registration.py  student.py  student_queue.py  teacher.py  teacher_get_xlsx.py  teacher_history.py  teacher_proceed_tasks.py  teacher_tasks_queue.py  test_handlers.py
app/managers/: client_manager.py  manager.py  operator_manager.py
app/models/: base_user.py  client.py  operator.py
app/utilits/: database.py  excel_writer.py  filters.py  keyboards.py  messages.py
app/utils/: back_routes.py  excel_writer.py  files.py  filters.py  keyboards.py  messages.py
bot/: __main__.py  logs.py
bot/modules/: states.py  utils.py
bot/modules/chore/: files.py
bot/modules/files/: service.py
bot/modules/groups/: handlers.py  service.py  windows.py
bot/modules/start/: handlers.py  service.py  windows.py
bot/modules/tasks/: handlers.py  notifications.py  service.py  (+1 more)
bot/scheduler/: __init__.py  jobs.py  scheduler.py
digitalqueue/: pyproject.toml
src/: config.py  errors.py  logs.py
src/api/: __main__.py  app.py
src/fsm_states/: client_states.py
src/storages/: dependencies.py  excel_writer.py  files.py  models.py
utilits/: keyboards.py
(+65 files in other folders)
