[project]
name = "queue-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aioschedule>=0.5.2",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.120.4",
    "greenlet>=3.2.4",
    "loguru>=0.7.3",
    "paracelsus>=0.12.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
]
