[project]
name = "digitalqueue"
version = "0.1.0"
description = ""
authors = [
    {name = "tomatoCoderq",email = "xasanFN@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "digitalqueue", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
